--- a/web/view/template.html
+++ b/web/view/template.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>搜索</title>
+    <title>我的爬虫</title>
     <style type="">
 
         .search_input {
