--- a/web/view/template.html
+++ b/web/view/template.html
@@ -71,6 +71,8 @@
                 <td>{{.Marriage}}</td>
                 <td>{{.Occupation}}</td>
                 <td>{{.Xinzuo}}</td>
+                <td>{{.House}}</td>
+                <td>{{.Car}}</td>
                 <td>{{.Hukou}}</td>
             {{end}}
             </tr>
